[package]
name = "iss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenvy = { version = "0.15.7", default-features = false }
futures = { version = "0.3.30", default-features = false }
serde = { version = "1.0.203", default-features = false }
serde_json = { version = "1.0.117", default-features = false }
sqlx = { version = "0.7.4", default-features = false, features = [
    "macros",
    "postgres",
    "runtime-tokio",
    "chrono",
    "uuid",
] }
structopt = "0.3.26"
tokio = { version = "1.38.0", features = ["rt", "macros"]}
